# ITALOccultCalc

./: .gitignore  .gitmodules  1272.eq1  1272.rwo  1272_jpl.eq1  13477.rwo  34713_yesiltas.eq1  34713_yesiltas.rwo  34713_yesiltas_small.rwo  ASCII_ART.txt  ASTDYN_INTEGRATION.md  ASTNUM_LIST_IMPLEMENTATION.md  CATALOG_MANAGER_IMPLEMENTATION.md  CMakeLists.txt  COMBINED_LISTS_IMPLEMENTATION.md  COMPLETION_CHECKLIST.md  CTestTestfile.cmake  DOWNLOAD_ASTDYS_CLEAN.md  ESEMPIO_CONFIG_MPC.md  IMPLEMENTAZIONE_FILTRI_OOP_COMPLETATA.md  INSTALLATION_GUIDE.md  INSTALLATION_SYSTEM.md  INTEGRATION_STATUS.md  LICENSE  ORBIT_FITTING_INTEGRATION_COMPLETE.md  PRESET_GUIDE.md  QUICKSTART.md  README.md  RKF78_INTEGRATION_COMPLETE.md  RKF78_INTEGRATION_SUMMARY.md  USAGE_GUIDE.md  WORKFLOW_DEC2025_TWOPHASE.md  asteroid_13477.json  asteroid_34713.json  build.sh  check_asteroid_pos.cpp  compile_commands.json  create_1272_eq1.py  create_1272_jpl_eq1.py  data  (+64 more)
Occult4/: AOTA.AOTA_SetTimeScale.resx  AOTA.IntegrityCheck.resx  AOTA.PlotForm.resx  AOTA.SelectOccultedStar.resx  LightCurves.Delete_del_init.resx  LightCurves.LightCurve.resx  LightCurves.LightCurveViewer.resx  LightCurves.LightCurve_Edit.resx  LightCurves.LightCurvesSelectRange.resx  LightCurves.Remove_Review_status.resx  Occult.AsteroidDiameters.resx  Occult.AsteroidPlotMultipath.resx  Occult.AsteroidRings.resx  Occult.AsteroidSearch.resx  Occult.AsteroidSelectForSearch.resx  Occult.AsteroidSummary.resx  Occult.Asteroid_Observations.DisplayDiameters.resx  Occult.Asteroid_Observations.EmailObservations.resx  Occult.Asteroid_Observations.LightCurveData.resx  Occult.Asteroid_Observations.MergeMainWithUpdatedObsFile.resx  Occult.Asteroid_Observations.ObservationsEditor.resx  Occult.Asteroid_Observations.PDS_AuthorList.resx  Occult.Asteroid_Observations.PlotObservations.resx  Occult.Asteroid_Observations.ReductionPlots.resx  Occult.Asteroid_Observations.SetDoubleStarOffsets.resx  Occult.Asteroid_Observations.StarDiameterAnalyser.resx  Occult.Asteroid_Observations.StarDiameterPlotAll.resx  Occult.Asteroid_Observations.TimeBaseOffsets.resx  Occult.Asteroid_Observations.Unistellar.resx  Occult.Asteroids.Relativity.resx  Occult.Calendar.resx  Occult.CheckInstallation.resx  Occult.Comets.resx  Occult.Conversion.resx  Occult.ConvertAstorb_etc.resx  Occult.CreateGaiaCatalog.resx  Occult.Defaults.resx  Occult.Diary.resx  Occult.Eclipses.ClosePlanetaryConjunctions.resx  Occult.EditDeltaT.resx  (+37 more)
RISULTATI_34713/: LEGGI_MI.md
build_a4/: CTestTestfile.cmake  compile_commands.json
build_fast/: simulation_output.txt
docs/: AGGIORNAMENTO_MANUALE_ITALIANO.md  ANALISI_HYGIEA.md  ASTDYS_MEAN_ELEMENTS.md  ASTEROID_DATABASE_SOURCES.md  ASTEROID_FILTERING.md  CONFIG_SYSTEM.md  CONFIG_SYSTEM_UPDATE_2025-11-24.md  DATABASE_QUICKSTART.md  DATABASE_SETUP.md  DATABASE_SURVEY_GUIDE.md  DOCUMENTATION_UPDATE_V2.md  EARTH_POSITION_OPTIMIZATIONS.md  EXECUTIVE_SUMMARY_V2.md  FORCE_MODEL.md  GAIA_CACHE.md  GAIA_CACHE_QUICKSTART.md  GAIA_CACHE_SYSTEM.md  GUIDA_FILE_OOP.md  GUIDE.md  HIGH_PRECISION_ALGORITHMS.md  HORIZONS_INTEGRATION_RESULTS.md  INTEGRATION_COMPLETE.md  ITALOCCULTCALC_README.md  JPL_EPHEMERIDES.md  JPL_HORIZONS_OCCULTATION_PROCEDURE.md.v1  OCCELMNT_XML_FORMAT.md  OOP_CONFIG_REFERENCE.md  ORBFIT_INTEGRATION.md  ORBIT_DETERMINATION.md  OUTPUT_SYSTEM.md  OUTPUT_SYSTEM_SUMMARY.md  RA15_ALGORITHM.md  RISOLUZIONE_PROBLEMI.md  SPK_FRAME_FIX.md  STRUCTURE.md  TECHNICAL_MANUAL_v2.md  TEST_MASSIVE_JAN2026.md  config_guide.md  confronto_occultazioni.aux  confronto_occultazioni.lof  (+52 more)
etc/: localasteroid
examples/: CMakeLists.txt  README.md  README_IOCCULTCALC.md  README_OCCULTATION_SEARCH.md  advanced_propagation_example.cpp  advanced_survey_example.cpp  asteroids.txt  basic_usage.cpp  calc_occultation_13477.cpp  check_asteroid_pos  compare_earth_methods.cpp  compare_occultation_predictions.cpp  compare_propagation  compare_propagation.cpp  debug_conversion.cpp  debug_propagator  debug_propagator.cpp  diagnose_catalog  eros_config.json  example_astdyn_fitting.cpp  example_combined_asteroid_lists.cpp  example_gauss.cpp  example_prediction_comparison.cpp  final_verify_13477.cpp  fit_and_propagate.cpp  generate_hygiea_iota_card.cpp  ioccultcalc_main.cpp  ioccultcalc_main.cpp.bak  ioccultcalc_search.cpp  italoccultcalc  italoccultcalc 2  italoccultcalc.cpp  jpl_comparison  jpl_comparison_example.cpp  jpl_horizons_occultation_search.cpp  jpl_horizons_occultation_search.cpp.bak  orbit_improvement.cpp  preset_13477.json  preset_34713_jan2026.json  search_occultations.cpp  (+65 more)
examples/config_templates/: README.md  creative_filters.oop  high_precision.json  high_precision.oop  massive_search.oop  nea_survey.json  survey_database.json  trojans.json
examples/test_cards/: event_card.tex
include/: catalog_manager.h  cubic_spline.h  nutation.h  parallel_algorithms.h  phase1_candidate_screening.h  phase2_occultation_geometry.h  planetary_aberration.h  refraction.h  topocentric.h
occult4_docs/: all_content.txt  occelmnt_references.txt  xml_patterns.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  test_allnum_parsing.cpp  test_asteroid_database_sqlite.cpp  test_asteroid_list_reader.cpp  test_asteroid_sqlite.cpp  test_astnum_output.cpp  test_combined_lists.cpp  test_jpl_astdys_comparison.cpp  test_jpl_horizons_comparison.cpp  test_localasteroid_real.cpp  test_mean_to_osculating.cpp  test_occultation_engine.cpp  test_oop_presets.cpp  test_oop_with_asteroid_lists.cpp  test_orbit_propagator_rkf78.cpp  test_propagation_vs_horizons.cpp  test_rkf78_comparison.cpp  test_time_utils.cpp  test_vesta_propagation.cpp
tools/: CMakeLists.txt  README.md  build_allnum_database.cpp  build_asteroid_database.cpp  compare_jpl_249.py  download_all_astdys.py  download_all_numbered_asteroids.py  download_mpc_database.py  fetch_249_elements.py  fetch_earth_2026.py  gaia_cache_downloader.cpp  gaia_cache_downloader.cpp.bak  map_generator.cpp  occult_calc.cpp  parse_mpcorb.py  test_astdys.cpp  test_covariance_loading.cpp  test_gaia.cpp  test_rwo.cpp  update_allnum_database.sh  verify_782_horizons.cpp
(+1112 files in other folders)
